--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,4 @@
-html, body {
+html,body {
     height: 100%;
     background-color: #3c415e;
 }
@@ -13,41 +13,25 @@ html, body {
     height: 100%;
 }
 
-.heading {
-    color: white;
-    text-align: center;
-    position: relative;
-    top: -15%;
-}
-
-.holder {
-    display: flex;
-    margin: auto;
-    width: fit-content;
-}
-
-button {
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
+.fix-box {
+    width: 100px;
+    height: 100px;
+    margin: 10px;
     display: inline-block;
-    font-size: 16px;
-    margin: 14px 12px;
+    border: 1px solid #000;
     cursor: pointer;
-    border-radius: 4px;
-}
-
-.btn-blue {
-    background: rgb(34, 193, 195);
-    color: black;
-}
-
-.btn-orange {
-    background: rgb(221, 112, 18);
-    color: black;
-}
-
-.btn-green {
-    background: rgb(44, 209, 88);
-    color: black;
-}
+  }
+  
+  .color-selector button {
+    margin: 5px;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .box-container {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+  }
+  
